minor overflow fix

--- a/src/style.css
+++ b/src/style.css
@@ -138,7 +138,6 @@ object {
 .web_id {
     float: left;
     width: 40%;
-    overflow: hidden;
 }
 
 .indexlink {
